# ipc_dart

./: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  pipe_main  pubspec.yaml
example/: ipc_example.dart  ipc_example_helper.dart
lib/: ipc.dart
lib/helpers/: channel_helper.dart
lib/interface/: error_exception.dart  exception.dart  pipe.dart
lib/pipe/: pipe_named.dart
lib/src/: ipc_base.dart
lib/src/channel/: channel_helper.dart  ipc_name_channel.dart
src/: ipc_base.dart
src/channel_linux/: CMakeLists.txt  pipe.c  pipe.cpp  pipe.h
test/: ipc_test.dart
